--- a/_posts/2017-07-23-blog-post.md
+++ b/_posts/2017-07-23-blog-post.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Reservoir Sampling'
+date: 2017-07-23
+permalink: /posts/2017/07/23/blog-post/
 tags:
   - cool posts
   - category1
