--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -8,13 +8,8 @@ tags:
   - deep learning
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
+Convolutional Neural Networks for Visual Recognition
 ======
 
-You can have many headings
-======
-
-Aren't headings cool?
+Lecture 1	: Course Introduction 
 ------
