--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -11,5 +11,7 @@ tags:
 Convolutional Neural Networks for Visual Recognition
 ======
 
-Lecture 1	: Course Introduction 
+Lecture 1: Introduction to Convolutional Neural Networks for Visual Recognition 
 ------
+
+Lecture 2: 
