--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -14,4 +14,47 @@ Convolutional Neural Networks for Visual Recognition
 Lecture 1: Introduction to Convolutional Neural Networks for Visual Recognition 
 ------
 
-Lecture 2: 
+Lecture 2: Image Classification
+------
+
+Lecture 3: Loss Functions and Optimization
+------
+
+Lecture 4: Introduction to Neural Networks
+------
+
+Lecture 5:
+------
+
+Lecture 6:
+------
+
+Lecture 7:
+------
+
+Lecture 8:
+------
+
+Lecture 9:
+------
+
+Lecture 10:
+------
+
+Lecture 11:
+------
+
+Lecture 12:
+------
+
+Lecture 13:
+------
+
+Lecture 14:
+------
+
+Lecture 15:
+------
+
+Lecture 16:
+------
