--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -23,38 +23,38 @@ Lecture 3: Loss Functions and Optimization
 Lecture 4: Introduction to Neural Networks
 ------
 
-Lecture 5:
+Lecture 5: Convolutional Neural Networks
 ------
 
-Lecture 6:
+Lecture 6: Training Neural Networks I
 ------
 
-Lecture 7:
+Lecture 7: Training Neural Networks II
 ------
 
-Lecture 8:
+Lecture 8: Deep Learning Software
 ------
 
-Lecture 9:
+Lecture 9: CNN Architectures
 ------
 
-Lecture 10:
+Lecture 10: Recurrent Neural Networks
 ------
 
-Lecture 11:
+Lecture 11: Detection and Segmentation
 ------
 
-Lecture 12:
+Lecture 12: Visualizing and Understanding
 ------
 
-Lecture 13:
+Lecture 13: Generative Models
 ------
 
-Lecture 14:
+Lecture 14: Deep Reinforcement Learning
 ------
 
-Lecture 15:
+Lecture 15: Efficient Methods and Hardware for Deep Learning
 ------
 
-Lecture 16:
+Lecture 16: Adversarial Examples and Adversarial Training
 ------
