--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -14,8 +14,16 @@ Convolutional Neural Networks for Visual Recognition
 Lecture 1: Introduction to Convolutional Neural Networks for Visual Recognition 
 ------
 
+Increasing computation (CPUs, GPUs) + Relative large high quality dataset (ImageNet) ---> CNN works very well 
+
 Lecture 2: Image Classification
 ------
+
+We want classifiers that are fast at prediction; slow for training is ok.
+
+L1 distance has coordinate dependency.
+
+Cross-Validation is useful for small datasets, but not used too frequently in deep learning.
 
 Lecture 3: Loss Functions and Optimization
 ------
