--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -28,6 +28,8 @@ Cross-Validation is useful for small datasets, but not used too frequently in de
 Lecture 3: Loss Functions and Optimization
 ------
 
+Multi-class SVM Classification: Given an example ($x_i$ )
+
 Lecture 4: Introduction to Neural Networks
 ------
 
