--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -28,7 +28,13 @@ Cross-Validation is useful for small datasets, but not used too frequently in de
 Lecture 3: Loss Functions and Optimization
 ------
 
-Multi-class SVM Classification: Given an example ($x_i$ )
+\\[ a^2 = b^2 + c^2 \\]
+
+Multi-class SVM Classification: Given an example (x<sub>i</sub>, y<sub>i</sub>) where x<sub>i</sub> is the image and where y<sub>i</sub> is the (integer) label, and using the shorthand for the scores vector: s = f(x<sub>i</sub>, W).
+
+The SVM loss has the form:
+
+L<sub>i</sub> = \sum_{j\neq}
 
 Lecture 4: Introduction to Neural Networks
 ------
