--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -28,11 +28,16 @@ Cross-Validation is useful for small datasets, but not used too frequently in de
 Lecture 3: Loss Functions and Optimization
 ------
 
-$a^2 = b^2 + c^2$
-
-Multi-class SVM Classification: Given an example (x<sub>i</sub>, y<sub>i</sub>) where x<sub>i</sub> is the image and where y<sub>i</sub> is the (integer) label, and using the shorthand for the scores vector: s = f(x<sub>i</sub>, W).
+Multi-class SVM Classification: Given an example ($x_i$, $y_i$) where $x_i$ is the image and where $y_i$ is the (integer) label, and using the shorthand for the scores vector: $s = f(x_i, W)$.
 
 The SVM loss has the form:
+
+$L_i = \sum_{j \neq y_i}
+\begin{cases} 
+0,  & \mbox{if }s_{y_i} \ge s_j+1 \\
+s_j-s_{y_i}+1, & \mbox{otherwise}
+\end{cases}
+=\sum_{j \neq y_i}\max(0, s_j-s_{y_i}+1)$
 
 
 Lecture 4: Introduction to Neural Networks
