--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -8,8 +8,7 @@ tags:
   - deep learning
 ---
 
-Convolutional Neural Networks for Visual Recognition
-======
+Here are the notes for `Convolutional Neural Networks for Visual Recognition`.
 
 Lecture 1: Introduction to Convolutional Neural Networks for Visual Recognition 
 ------
