--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -20,7 +20,7 @@ Lecture 2: Image Classification
 
 We want classifiers that are fast at prediction; slow for training is ok.
 
-L1 distance has coordinate dependency.
+$L_1$ distance has coordinate dependency.
 
 Cross-Validation is useful for small datasets, but not used too frequently in deep learning.
 
@@ -37,6 +37,12 @@ $L_i = \sum_{j \neq y_i}
 s_j-s_{y_i}+1, & \mbox{otherwise}
 \end{cases}
 =\sum_{j \neq y_i}\max(0, s_j-s_{y_i}+1)$
+
+Loss over full dataset is average: 
+
+$L=\frac{1}{N}\sum_{i=1}^NL_i$
+
+In practice: Always use analytic gradient, but check implementation with numerical gradient. This is called a gradient check.
 
 
 Lecture 4: Introduction to Neural Networks
