--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -48,11 +48,88 @@ In practice: Always use analytic gradient, but check implementation with numeric
 Lecture 4: Introduction to Neural Networks
 ------
 
+Patterns in BackFlow:
+
+add gate: gradient distributor
+
+max gate: gradient router
+
+mul gate: gradient switcher
+
+Always check: The gradient with respect to a variable should have the same shape as the variable.
+
+Implementations maintain a graph structure, where the nodes implement the `forward()`/`backward()` API.
+
+
+
 Lecture 5: Convolutional Neural Networks
 ------
 
+Low-level features --> Mid-level features --> High-level features --> Linearly separable classifier
+
+Output size: $\frac{N-f}{stride}+1$
+
+Eample time:
+
+Input volume: $32 \times 32 \times 3$
+
+$10$ $5 \times 5$ filters with stride $1$, pad $2$
+
+Number of parameters in this layer? 
+
+Each filter has $5 \times 5 \times 3 + 1 = 76$ parameters --> $76 \times 10 = 760$
+
 Lecture 6: Training Neural Networks I
 ------
+
+###Activation Funtions:
+
+sigmoid: $\sigma(x) = 1/(1+e^{-x})$
+
+* 3 problems: 1. Saturated neurons "kill" the gradients. 2. Sigmoid outputs are not zero-centered. 3. $\exp()$ is a bit computational expensive.
+
+tanh(x)
+
+* zero centered, still kills gradients when saturated
+
+ReLU (Rectified Linear Unit): $f(x) = \max(0, x)$
+
+* Does not saturate, very compuationally efficient, converges much faster than sigmoid/tanh in practice (e.g. 6x), actually more biologically plausible than sigmoid
+* not zero-centered, an annoyance
+
+Leaky ReLU: $f(x) = \max(0.01x, x)$
+
+* will not die
+
+Parametric Rectifier (PReLU): $f(x) = \max(\alpha x, x)$
+
+Exponential Linear Units (ELU): $f(x) =
+\begin{cases} 
+x,  & \mbox{if }x > 0 \\
+\alpha(\exp(x)-1), & \mbox{if } x \le 0
+\end{cases}$
+
+* All benefits of ReLU, closer to zero mean outputs, negative saturation regime compared with Leaky ReLU adds some robustness to noise
+*  Computation requires $\exp()$
+
+Maxout "Neuron": $\max(w_1^Tx+b_1, w_2^Tx+b_2)$
+
+* Generalizes ReLU and Leaky ReLU, Linear Regime, does not saturate, does not die
+* doubles the number of parameters/neuron
+
+###Weight Initialization:
+
+weights too small --> collapse; weights too large --> saturated
+
+Xavier initialization (good for tanh, bad for ReLU)
+
+Batch Normalization
+
+
+
+
+
+
 
 Lecture 7: Training Neural Networks II
 ------
