--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -123,16 +123,47 @@ weights too small --> collapse; weights too large --> saturated
 
 Xavier initialization (good for tanh, bad for ReLU)
 
-Batch Normalization
+### Batch Normalization
 
+Consider a batch of activations at some layer. To make each dimension unit gaussian, apply:
 
+\begin{equation}
+\bar{x}^{(k)} = \frac{x^{(k)}-E[x^{(k)}]}{\sqrt{Var[x^{(k)}]}}
+\end{equation}
 
+1. compute the empirical mean and variance independently for each dimension.
+2. normalize.
+3. and then allow the network to squash the range if it wants to:
 
+\begin{equation}
+y^{(k)} = \gamma^{(k)}\bar{x}^{(k)} + \beta^{(k)}
+\end{equation}
 
+Usually inserted after Fully Connected or Convolutional layers, and before nonlinearity.
 
+Note: at test time BatchNorm layer functions differently:
+
+The mean/std are not computed based on the batch. Instead, a single fixed empirical mean of activations during training is used. (e.g. can be estimated during training with running averages)
+
+Random Search > Grid Search
 
 Lecture 7: Training Neural Networks II
 ------
+
+### Batch Normalization
+
+Input: $x$: $N \times D$
+
+Learnable parameters: $\gamma, \beta$: $D$
+
+Intermediates: $\mu, \sigma$: $D$; $\bar{x}$: $N \times D$
+
+Output: $y$: $N \times D$
+
+$\mu_j = \frac{1}{N}\sum_{i=1}^{N}x_{i,j} \ \ \ \ \ \ \sigma_{j}^2 = \frac{1}{N}\sum_{i=1}^{N}(x_{i,j}-\mu_j)^2$
+
+$\bar{x}_{i,j} = \frac{x_{i,j}-\sigma_j}{\sqrt{\sigma_j^2+\epsilon}} \ \ \ \ \ \ y_{i,j} = \gamma_j\bar{x}_{i,j}+\beta_j$
+
 
 Lecture 8: Deep Learning Software
 ------
