--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -164,6 +164,110 @@ $\mu_j = \frac{1}{N}\sum_{i=1}^{N}x_{i,j} \ \ \ \ \ \ \sigma_{j}^2 = \frac{1}{N}
 
 $\bar{x}_{i,j} = \frac{x_{i,j}-\sigma_j}{\sqrt{\sigma_j^2+\epsilon}} \ \ \ \ \ \ y_{i,j} = \gamma_j\bar{x}_{i,j}+\beta_j$
 
+### Fancier Optimization
+
+Loss function has high condition number: ratio of largest to smallest singular value of the Hessian matrix is large.
+
+Saddle point is common in large nueral network.
+
+SGD:
+
+$x_{t+1} = x_{t} - \alpha \nabla f(x_{t})$
+
+SGD + Momentum:
+
+$v_{t+1} = \rho v_{t} + \nabla f(x_t)$
+
+$x_{t+1} = x_{t} - \alpha v_{t+1}$
+
+* Build up "velocity" as a running mean of gradients
+* $\rho$ gives "friction"; typically $\rho=0.9$ or $0.99$
+
+SGD + Nesterov Momentum:
+
+$v_{t+1} = \rho v_t - \alpha \nabla f(x_t+\rho v_t)$
+
+$x_{t+1} = x_{t} + v_{t+1}$ 
+
+AdaGrad:
+
+* Added element-wise scaling of the gradient based on the historical sum of squares in each dimension
+
+<pre>
+grad_squared = 0
+while True:
+  dx = compute_gradient(x)
+  grad_squared += dx * dx
+  x -= learning_rate * dx / (np.sqrt(grad_squared) + 1e-7)
+</pre>
+
+RMSProp
+
+<pre>
+grad_squared = 0
+while True:
+  dx = compute_gradient(x)
+  grad_squared = decay_rate * grad_squared + (1 - decay_rate) * dx * dx
+  x -= learning_rate * dx / (np.sqrt(grad_squared) + 1e-7)
+</pre>
+
+Adam (almost)
+
+<pre>
+first_moment = 0
+second_moment = 0
+while True:
+  dx = compute_gradient(x)
+  first_moment = beta1 * first_moment + (1 - beta1) * dx
+  second_moment = beta2 * second_moment + (1 - beta2) * dx * dx # Momentum
+  x -= learning_rate * first_moment / (np.sqrt(second_moment) + 1e-7) # AdaGrad/RMSProp
+</pre>
+
+At the begining, `second_moment` is too small. The step is too large at the begining.
+
+Adam (Full form)
+
+<pre>
+first_moment = 0
+second_moment = 0
+while True:
+  dx = compute_gradient(x)
+  first_moment = beta1 * first_moment + (1 - beta1) * dx
+  second_moment = beta2 * second_moment + (1 - beta2) * dx * dx # Momentum
+  first_unbias = first_moment / (1 - beta1 ** t) # Bias correction
+  second_unbias = second_moment / (1 - beta2 ** t) # Bias correction
+  x -= learning_rate * first_moment / (np.sqrt(second_moment) + 1e-7) # AdaGrad/RMSProp
+</pre>
+
+Bias correction for the fact that first and second moment estimates start at zero.
+
+Adam with $beta1=0.9$, $beta2=0.999$, and $learning_rate=1e-3$ or $5e-4$ is a great starting point for many models.
+
+Learning rate decay over time.
+
+* step decay: e.g. decay learning rate by half every few epochs.
+
+* exponential decay: $\alpha = \alpha_0 e^{-kt}$
+
+* $1/t$ decay: $\alpha = \alpha_0/(1+kt)$
+
+First-Order Optimization
+
+1. Use gradient form linear approxixmation
+2. Step to minimize the approximation
+
+Second-Order Optimization
+
+1. Use gradient and Hessian to form quadratic approxximation
+2. Step to the minima of the approximation
+
+In practice:
+
+* Adam is a good default choice in most cases
+
+* If you can afford to do full batch updates then try out L-BFGS (and don't forget to disable all sources of noise)
+
+Dropout: remember to rescale in testing time.
 
 Lecture 8: Deep Learning Software
 ------
