--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -272,6 +272,12 @@ Dropout: remember to rescale in testing time.
 Lecture 8: Deep Learning Software
 ------
 
+Udacity: Intro to Parallel Programming
+
+Static: Once graph is built, can serialize it and run it without the code that built the graph.
+
+Dynamic: Graph building and exxecution are intertwined, so always need to keep code around.
+
 Lecture 9: CNN Architectures
 ------
 
