--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -281,6 +281,42 @@ Dynamic: Graph building and exxecution are intertwined, so always need to keep c
 Lecture 9: CNN Architectures
 ------
 
+LeNet
+
+AleNet
+
+VGG
+
+* Stack of three $3 \times 3$ conv (stride 1) layers has same effective receptive field as one $7 \times 7$ conv layer
+
+* But deeper, more non-linearities
+
+* And fewer parameters: $3 \times (3^2C^2)$ vs. $7^2C^2$ for $C$ channels per layer.
+
+GoogLeNet
+
+* Inception module
+
+* Bottleneck layer to improve efficiency
+
+* 12x less parameters than AlexNet
+
+ResNet
+
+* very deep networks using residual connections
+
+* the problem is an optimization problem, deeper models are harder to optimize
+
+* the deeper model should be able to perform at least as well as the shallower model.
+
+* a solution by construction is copying the learned layers from the shallower model and setting additional layers to identity mapping.
+
+* Stack residual blocks; Every residual block has two $3 \times 3$ conv layers
+
+Network in Network
+
+* Mlpconv layer with "micronetowrk" within each conv layer to compute more abstract features for local patches
+ 
 Lecture 10: Recurrent Neural Networks
 ------
 
