--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -320,6 +320,28 @@ Network in Network
 Lecture 10: Recurrent Neural Networks
 ------
 
+$h_t = f_W(h_{t-1}, x_t)$
+
+Truncated Backpropagation through time:
+
+* Run forward and backward through chunks of the sequence instead of whole sequence
+
+* Carry hidden states forward in time forever, but only backpropagate for some smaller number of steps
+
+Image Captioning with Attention
+
+Vanilla RNN:
+
+* Largest singular value > 1: eploding gradients
+
+* largest singular value < 1: vanishing gradients
+
+LSTM:
+
+* two hidden states: hidden state + cell state
+
+GRU
+
 Lecture 11: Detection and Segmentation
 ------
 
