--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -332,9 +332,9 @@ Image Captioning with Attention
 
 Vanilla RNN:
 
-* Largest singular value > 1: eploding gradients
+* Largest singular value > 1: eploding gradients (gradient clipping)
 
-* largest singular value < 1: vanishing gradients
+* largest singular value < 1: vanishing gradients (advanced architecture)
 
 LSTM:
 
@@ -344,6 +344,52 @@ GRU
 
 Lecture 11: Detection and Segmentation
 ------
+
+### Semantic Segmentation
+
+No objects, just pixels. 
+
+Label each pixel in the image with a category label. 
+
+Don't differentiate instances, only care about pixels.
+
+Design network as a bunch of convolutional layers, with downsampling and upsampling inside the network.
+
+Downsampling: pooling, strided convolution
+
+Upsampling: unpooling (nearest neighbor, bed of nails), max unpooling, transpose convolution
+
+### Classification + Localization
+
+Treat localization as a regression problem! (Box Coordinates)
+
+Two loss functions: softmax loss + l2 loss
+
+weighted sum of these two losses
+
+Aside: Human Pose Estimation (Regression loss on several body points)
+
+### Object Detetion
+
+Object dection as Classification: Sliding Window
+
+* Apply a CNN to many different crops of the image, CNN classifies each crop as object or background (Need to apply CNN to huge number of locations and scales)
+
+Region Propsals:
+
+* Find "bloobby" image regions that are likely to contain objects
+
+* R-CNN, Fast R-CNN, Faster R-CNN (region based method)
+
+Detection without Proposals:
+
+* YOLO/SSD
+
+Aside: Object Detection + Captioning = Dense Captioning
+
+### Instance Segmentation
+
+* Mask R-CNN
 
 Lecture 12: Visualizing and Understanding
 ------
