--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -394,14 +394,138 @@ Aside: Object Detection + Captioning = Dense Captioning
 Lecture 12: Visualizing and Understanding
 ------
 
+Dimensionality Reduction: PCA, t-SNE
+
+Saliency Maps: Compute gradient of (unnormalized) class score with respect to image pixels, take absolute value and max over RGB channels
+
+Visualizing CNN features: Gradient Ascent
+
+* (Guided) backprop: Find the part of an image that a neuron responds to
+
+* Gradient ascent: Generate a synthetic image that maximally activates a neuron
+
+* $I^* = \arg\max_{I} f(I) + R(I)$, $f(I)$: Neuron value, $R(I)$: Natural image regularizer
+
+Fooling Images / Adversarial Examples
+
+* Start from an arbitrary image, Pick an arbitrary class. Modify the image to maximize the class, Repeat until network is fooled
+
+DeepDream
+
+Neural Style Transfer: Feature + Gram Reconstruction
+
+* Problem: Style transfer requires many forward / backward passes thourgh VGG; very slow
+
+
 Lecture 13: Generative Models
 ------
+
+### PixelRNN and PixelCNN:
+
+Fully visible belief network
+
+Use chain rule to decompose likelihood of an image $x$ into product of 1-d distributions:
+
+\\[p(x) = \prod_{i=1}^n p(x_{i}|x_1,...,x_{i-1})\\]
+
+$x$: image, $x_i$: ith pixel
+
+Then maximize likelihood of training data
+
+PixelRNN:
+
+* Dependency on previous pixels modeled using an RNN (LSTM)
+
+PixelCNN:
+
+* Dependency on previous pixels now modeled using a CNN over context region
+
+* Training is faster than PixelRNN
+
+### Variational Autoencoders (VAE)
+
+VAEs define intractable density function with latent $z$:
+
+\\[ p_{\theta}(x) = \int p_{\theta}(z) p_{\theta}(x|z)dz\\]
+
+Cannot optimize directly, derive and optimize lower bound on likelihood instead
+
+In addition to decoder network modeling $p_{\theta}(x|z)$, define addidional encoder netowrk $q_{\Phi}$ that approximates $p_{\theta}(z|x)$.
+
+Encoder Network $q_{\theta}(z|x)$ (parameters $\Phi$): $x$ --> $\mu_{z|x}$, $\Sigma_{z|x}$ (mean and (diagonal) covariance of $z|x$)
+
+* Sample $z$ from $z|x \sim N(\mu_{z|x}, \Sigma_{z|x})$ 
+
+Decoder Network $p_{\theta}(x|z)$ (parameters $\theta$): $z$ --> $\mu_{x|z}$, $\Sigma_{x|z}$ (mean and (diagonal) covariance of $x|z$)
+
+* Sample $x$ from $x|z \sim N(\mu_{x|z}, \Sigma_{x|z})$ 
+
+\\[\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)}|z)] - D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z)) + D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))\\]
+
+* $E_z[\log p_{\theta}(x^{(i)}|z)]$: Decoder network gives $p_{\theta}(x|z)$, can compute estimate of this term through sampling
+
+* $D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z))$: This KL term (between Gaussians for encoder and $z$ prior) has nice closed-form solution
+
+* $D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))$: $p_{\theta}(z|x)$ intractable, cannot compute this KL term, but we know KL divergence always $\ge0$ 
+
+### Generative Adversarial Networks (GANs)
+
+
+
 
 Lecture 14: Deep Reinforcement Learning
 ------
 
 Lecture 15: Efficient Methods and Hardware for Deep Learning
 ------
+
+The first challenge: Model size
+
+The second challenge: Speed
+
+The Third challenge: Energy Efficiency
+
+### Algorithms for Efficient Inference
+
+Pruning Nueral Networks
+
+Weight Sharing
+
+Quantizaton
+
+Low-Rank Approimation
+
+Binary/Ternary Net
+
+Winogard Transformation
+
+### Hardware for Efficient Inferene
+
+a common goal: minimize memory access
+
+TPU
+
+### Algorithms for Efficient Training
+
+Parallelization
+
+* data parallel
+
+* model parallel
+
+* hyper-parameter parallel
+
+Mixed Precision with FP16 and FP32
+
+Model Distillation
+
+* softened outputs reveal the dark knowledge
+
+DSD: Dense Sparse Dense Training
+
+### Hardware for Efficient Training
+
+GPU
 
 Lecture 16: Adversarial Examples and Adversarial Training
 ------
