--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -426,7 +426,7 @@ Fully visible belief network
 
 Use chain rule to decompose likelihood of an image $x$ into product of 1-d distributions:
 
-\\[p(x) = \prod_{i=1}^n p(x_{i}|x_1,...,x_{i-1})\\]
+$p(x) = \prod_{i=1}^n p(x_{i}|x_1,...,x_{i-1})$
 
 $x$: image, $x_i$: ith pixel
 
@@ -446,7 +446,7 @@ PixelCNN:
 
 VAEs define intractable density function with latent $z$:
 
-\\[ p_{\theta}(x) = \int p_{\theta}(z) p_{\theta}(x|z)dz\\]
+$p_{\theta}(x) = \int p_{\theta}(z) p_{\theta}(x|z)dz$
 
 Cannot optimize directly, derive and optimize lower bound on likelihood instead
 
@@ -460,7 +460,7 @@ Decoder Network $p_{\theta}(x|z)$ (parameters $\theta$): $z$ --> $\mu_{x|z}$, $\
 
 * Sample $x$ from $x|z \sim N(\mu_{x|z}, \Sigma_{x|z})$ 
 
-\\[\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)}|z)] - D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z)) + D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))\\]
+$\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)}|z)] - D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z)) + D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))$
 
 * $E_z[\log p_{\theta}(x^{(i)}|z)]$: Decoder network gives $p_{\theta}(x|z)$, can compute estimate of this term through sampling
 
@@ -525,7 +525,7 @@ DSD: Dense Sparse Dense Training
 
 ### Hardware for Efficient Training
 
-GPU
+GPU, Cloud TPU
 
 Lecture 16: Adversarial Examples and Adversarial Training
 ------
