--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -426,7 +426,7 @@ Fully visible belief network
 
 Use chain rule to decompose likelihood of an image $x$ into product of 1-d distributions:
 
-$p(x) = \prod_{i=1}^n p(x_{i}|x_1,...,x_{i-1})$
+$p(x) = \prod_{i=1}^n p(x_{i} \mid x_1,...,x_{i-1})$
 
 $x$: image, $x_i$: ith pixel
 
@@ -446,27 +446,29 @@ PixelCNN:
 
 VAEs define intractable density function with latent $z$:
 
-$p_{\theta}(x) = \int p_{\theta}(z) p_{\theta}(x|z)dz$
+$p_{\theta}(x) = \int p_{\theta}(z) p_{\theta}(x \mid z)dz$
 
 Cannot optimize directly, derive and optimize lower bound on likelihood instead
 
-In addition to decoder network modeling $p_{\theta}(x|z)$, define addidional encoder netowrk $q_{\Phi}$ that approximates $p_{\theta}(z|x)$.
+In addition to decoder network modeling $p_{\theta}(x \mid z)$, define addidional encoder netowrk $q_{\Phi}$ that approximates $p_{\theta}(z \mid x)$.
 
-Encoder Network $q_{\theta}(z|x)$ (parameters $\Phi$): $x$ --> $\mu_{z|x}$, $\Sigma_{z|x}$ (mean and (diagonal) covariance of $z|x$)
+Encoder Network $q_{\theta}(z \mid x)$ (parameters $\Phi$): $x$ --> $\mu_{z \mid x}$, $\Sigma_{z \mid x}$ (mean and (diagonal) covariance of $z \mid x$)
 
-* Sample $z$ from $z|x \sim N(\mu_{z|x}, \Sigma_{z|x})$ 
+* Sample $z$ from $z|x \sim N(\mu_{z \mid x}, \Sigma_{z \mid x})$ 
 
-Decoder Network $p_{\theta}(x|z)$ (parameters $\theta$): $z$ --> $\mu_{x|z}$, $\Sigma_{x|z}$ (mean and (diagonal) covariance of $x|z$)
+Decoder Network $p_{\theta}(x \mid z)$ (parameters $\theta$): $z$ --> $\mu_{x \mid z}$, $\Sigma_{x \mid z}$ (mean and (diagonal) covariance of $x \mid z$)
 
-* Sample $x$ from $x|z \sim N(\mu_{x|z}, \Sigma_{x|z})$ 
+* Sample $x$ from $x \mid z \sim N(\mu_{x \mid z}, \Sigma_{x \mid z})$ 
 
-$\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)}|z)] - D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z)) + D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))$
+$\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)} \mid z)] - D_{KL}(q_{\Phi}(z \mid x^{(i)}) \| p_{\theta}(z)) + D_{KL}(q_{\Phi}(z \mid x^{(i)}) \| p_{\theta}(z \mid x^{(i)}))$
 
-* $E_z[\log p_{\theta}(x^{(i)}|z)]$: Decoder network gives $p_{\theta}(x|z)$, can compute estimate of this term through sampling
+* $E_z[\log p_{\theta}(x^{(i)} \mid z)]$: Decoder network gives $p_{\theta}(x \mid z)$, can compute estimate of this term through sampling
 
-* $D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z))$: This KL term (between Gaussians for encoder and $z$ prior) has nice closed-form solution
+* $D_{KL}(q_{\Phi}(z \mid x^{(i)}) \| p_{\theta}(z))$: This KL term (between Gaussians for encoder and $z$ prior) has nice closed-form solution
 
-* $D_{KL}(q_{\Phi}(z|x^{(i)})||p_{\theta}(z|x^{(i)}))$: $p_{\theta}(z|x)$ intractable, cannot compute this KL term, but we know KL divergence always $\ge0$ 
+* $D_{KL}(q_{\Phi}(z \mid x^{(i)}) \| p_{\theta}(z \mid x^{(i)}))$: $p_{\theta}(z \mid x)$ intractable, cannot compute this KL term, but we know KL divergence always $\ge0$ 
+
+[Tutorial on Variational Autoencoders](https://arxiv.org/abs/1606.05908)
 
 ### Generative Adversarial Networks (GANs)
 
@@ -475,6 +477,24 @@ $\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)}|z)] - D_{KL}(q_{\Phi}(z|
 
 Lecture 14: Deep Reinforcement Learning
 ------
+
+Problem involving an agent interacting with an environment, which provides numeric reward singals
+
+Goal: Learn how to take actions in order to maximize reward
+
+### Markov Decision Process
+
+* Defined by: $(S, A, R, P, \gamma)$
+
+* $S$: set of possible states
+
+* $A$: set of possible actions
+
+* $R$: distribution of reward given (state, action) pair
+
+* $P$: transition probability i.e. distribution over next state given (state, action) pair
+
+* $\gamma$: discount factor
 
 Lecture 15: Efficient Methods and Hardware for Deep Learning
 ------
