--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -454,7 +454,7 @@ In addition to decoder network modeling $p_{\theta}(x \mid z)$, define addidiona
 
 Encoder Network $q_{\theta}(z \mid x)$ (parameters $\Phi$): $x$ --> $\mu_{z \mid x}$, $\Sigma_{z \mid x}$ (mean and (diagonal) covariance of $z \mid x$)
 
-* Sample $z$ from $z|x \sim N(\mu_{z \mid x}, \Sigma_{z \mid x})$ 
+* Sample $z$ from $z \mid x \sim N(\mu_{z \mid x}, \Sigma_{z \mid x})$ 
 
 Decoder Network $p_{\theta}(x \mid z)$ (parameters $\theta$): $z$ --> $\mu_{x \mid z}$, $\Sigma_{x \mid z}$ (mean and (diagonal) covariance of $x \mid z$)
 
