--- a/_posts/2018-08-01-blog-post-3.md
+++ b/_posts/2018-08-01-blog-post-3.md
@@ -25,7 +25,85 @@ Microservices Design Pattern:
 
 Microservices are one of the reasons we need advanced tools, like Kubernetes.
 
+Twelve-Factor Apps (Best-practices for building deployable software-as-a-service apps)
 
+* Portable
 
+* Continually Deployable
+
+* Scalable
+
+[12factor.net](https://12factor.net/)
+
+JSON Web Tokens (JWT) (Compact, self-contained method for transferring secure data as a JSON object.)
+
+* Authentication
+
+* Information Exchange
+
+Building the Containers with Docker
+------
+
+Containers (Technology that makes it easy to run and distribute applications across different operating environments)
+
+* Independent packages
+
+* Namespace isolation
+
+Dockerfile
+
+<pre>
+FROM alpine:3.1
+MAINTAINER Kelsey Hightower <kelsey.hightower@gmail.com>
+ADD hello /usr/bin/hello
+ENTRYPOINT ["hello"]
+</pre>
+
+* Dockerfiles contain step-by-step instructions for creating Docker images
+
+[Docker Intro](http://www.ruanyifeng.com/blog/2018/02/docker-tutorial.html)
+
+Kubernetes
+------
+
+Pods (Logical Application)
+
+* One or more containers and volumes
+
+* Shared namespaces
+
+* One IP per pod
+
+Pod can be created using pod configuration files, for example `monolith.yaml`
+
+<pre>
+apiVersion: v1
+kind: Pod
+metadata:
+  name: monolith
+  labels:
+    app: monolith
+spec:
+  containers:
+    - name: monolith (This pod is made up of one container, monolith.)
+      image: udacity/example-monolith:1.0.0
+      args: (We are passing a few arguments to the container when it starts up.)
+        - "-http=0.0.0.0:80"
+        - "-health=0.0.0.0:81"
+        - "-secret=secret"
+      ports:
+        - name: http
+          containerPort: 80
+        - name: health
+          containerPort: 81
+      resources:
+        limits:
+          cpu: 0.2
+          memory: "10Mi"
+</pre>
+
+Monitoring and Health Checks
+
+Kubernetes daemon: Kubelet
 
 
