--- a/_posts/2018-08-01-blog-post-3.md
+++ b/_posts/2018-08-01-blog-post-3.md
@@ -106,4 +106,17 @@ Monitoring and Health Checks
 
 Kubernetes daemon: Kubelet
 
+Secrets and Configmaps (Configmaps and Secrets are similiar except Configmaps don't have to be sensitive data)
+
+Services
+
+* Persistent Endpoint for Pods
+
+* Use labels to select pods
+
+* Internal or External IPs
+
+Containerize an application
+------
+
 
