--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'CS231n Note'
+title: 'Convolutional Neural Networks for Visual Recognition'
 date: 2018-08-01
 permalink: /posts/2018/08/cs231n/
 tags:
@@ -472,8 +472,34 @@ $\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)} \mid z)] - D_{KL}(q_{\Ph
 
 ### Generative Adversarial Networks (GANs)
 
+ Generator network: try to fool the discriminator by generating real-looking images
+ 
+ Discriminator network: try to distinguish between real and fake images
+ 
+ Minimax objective function:
+ 
+ $\min_{\theta_{g}} \max_{\theta_{d}}[E_{x \thicksim p_{data}} \log D_{\theta_{d}}(x) + E_{z \thicksim p(z)} \log(1-D_{\theta_{d}}(G_{\theta_{g}}(z)))]$
+ 
+ * Discriminator ($\theta_{d}$) wants to maximize objective such that $D(x)$ is close to 1 (real) and $D(G(z))$ is close to 0 (fake)
 
+ * Generator ($\theta_{g}$) wants to minimize objective such that $D(G(z))$ is close to 1 (discriminator is fooled into thinking generatored $G(z)$ is real)
 
+Alternate between:
+
+1. Gradient ascent on discriminator
+
+  $\max_{\theta_{d}}[E_{x \thicksim p_{data}} \log D_{\theta_{d}}(x) + E_{z \thicksim p(z)} \log(1-D_{\theta_{d}}(G_{\theta_{g}}(z)))]$ 
+  
+2. Gradient descent on generator
+
+  $\min_{\theta_{g}} E_{z \thicksim p(z)} \log(1-D_{\theta_{d}}(G_{\theta_{g}}(z)))$
+  
+  or
+  
+  Gradient ascent on generator
+  
+  $\max_{\theta_{g}} E_{z \thicksim p(z)} \log(D_{\theta_{d}}(G_{\theta_{g}}(z)))$
+  
 
 Lecture 14: Deep Reinforcement Learning
 ------
