--- a/_posts/2018-08-01-blog-post-4.md
+++ b/_posts/2018-08-01-blog-post-4.md
@@ -181,9 +181,23 @@ Kubernetes can be installed using different configurations. The four major insta
 * Multi-Node etcd, Multi-Master, and Multi-Worker Installation
 
   In this mode, etcd is configured in a clustered mode, outside the Kubernetes cluster, and the nodes connect to it. The master nodes are all configured in an HA mode, connecting to multiple worker nodes. This is the most advanced and recommended production setup.  
-  
-  
-  
-  
+ 
+
+Accessing Minikube
+------
+
+Any healthy running Kubernetes cluster can be accessed via one of the following methods:
+
+* Command Line Interface (CLI)
+
+  kubectl is the Command Line Interface (CLI) tool to manage the Kubernetes cluster resources and applications.
+
+* Graphical User Interface (GUI)
+
+  The Kubernetes dashboard provides the Graphical User Interface (GUI) to interact with its resources and containerized applications.
+
+* APIs
+
+  Kubernetes has the API server, and operators/users connect to it from the external world to interact with the cluster. Using both CLI and GUI, we can connect to the API server on the master node to perform different operations. We can directly connect to the API server using its API endpoints and send commands to it, as long as we can access the master node and have the right credentials.
   
   
