--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -486,17 +486,17 @@ $\log p_{\theta}(x^{(i)}) = E_z[\log p_{\theta}(x^{(i)} \mid z)] - D_{KL}(q_{\Ph
 
 Alternate between:
 
-1. Gradient ascent on discriminator
+* Gradient ascent on discriminator
 
   $\max_{\theta_{d}}[E_{x \thicksim p_{data}} \log D_{\theta_{d}}(x) + E_{z \thicksim p(z)} \log(1-D_{\theta_{d}}(G_{\theta_{g}}(z)))]$ 
   
-2. Gradient descent on generator
+* Gradient descent on generator
 
   $\min_{\theta_{g}} E_{z \thicksim p(z)} \log(1-D_{\theta_{d}}(G_{\theta_{g}}(z)))$
   
-  or
+or
   
-  Gradient ascent on generator
+*  Gradient ascent on generator
   
   $\max_{\theta_{g}} E_{z \thicksim p(z)} \log(D_{\theta_{d}}(G_{\theta_{g}}(z)))$
   
