--- a/_posts/2018-08-01-blog-post-4.md
+++ b/_posts/2018-08-01-blog-post-4.md
@@ -201,3 +201,53 @@ Any healthy running Kubernetes cluster can be accessed via one of the following 
   Kubernetes has the API server, and operators/users connect to it from the external world to interact with the cluster. Using both CLI and GUI, we can connect to the API server on the master node to perform different operations. We can directly connect to the API server using its API endpoints and send commands to it, as long as we can access the master node and have the right credentials.
   
   
+Kubernetes Building Blocks
+------
+
+With each object, we declare our intent or desired state using the `spec` field. The Kubernetes system manages the `status` field for objects, in which it records the actual state of the object. At any given point in time, the Kubernetes Control Plane tries to match the object's actual state to the object's desired state.
+
+Examples of Kubernetes objects are Pods, ReplicaSets, Deployments, Namespaces, etc.
+
+To create an object, we need to provide the `spec` field to the Kubernetes API server. The `spec` field describes the desired state, along with some basic information, like the name. The API request to create the object must have the `spec` field, as well as other details, in a JSON format. Most often, we provide an object's definition in a `.yaml` file, which is converted by `kubectl` in a JSON payload and sent to the API server.
+
+Once the object is created, the Kubernetes system attaches the `status` field to the object.
+
+* Pods
+
+  A Pod is the smallest and simplest Kubernetes object. It is the unit of deployment in Kubernetes, which represents a single instance of the application. A Pod is a logical collection of one or more containers, which:
+  
+  * Are scheduled together on the same host
+  * Share the same network namespace
+  * Mount the same external storage (volumes)
+
+  We attach the Pod's specification to other objects using Pods Templates.
+    
+  Pods are ephemeral in nature, and they do not have the capability to self-heal by themselves. That is why we use them with controllers, which can handle a Pod's replication, fault tolerance, self-heal, etc. Examples of controllers are Deployments, ReplicaSets, ReplicationControllers, etc. 
+  
+* ReplicationControllers  
+  
+  A ReplicationController (rc) is a controller that is part of the master node's controller manager.  
+  
+* ReplicaSets
+
+  A ReplicaSet (rs) is the next-generation ReplicationController. ReplicaSets support both equality- and set-based selectors, whereas ReplicationControllers only support equality-based Selectors.
+  
+  ReplicaSets can be used independently, but they are mostly used by Deployments to orchestrate the Pod creation, deletion, and updates. A Deployment automatically creates the ReplicaSets, and we do not have to worry about managing them. 
+  
+* Deployments
+
+  Deployment objects provide declarative updates to Pods and ReplicaSets. The DeploymentController is part of the master node's controller manager, and it makes sure that the current state always matches the desired state.
+    
+* Labels
+
+  Labels are key-value pairs that can be attached to any Kubernetes objects (e.g. Pods). Labels are used to organize and select a subset of objects, based on the requirements in place. Many objects can have the same Label(s). Labels do not provide uniqueness to objects. 
+  
+* Namespace
+
+  We can partition the Kubernetes cluster into sub-clusters using Namespaces. The names of the resources/objects created inside a Namespace are unique, but not across Namespaces.
+  
+  The `kube-system` Namespace contains the objects created by the Kubernetes system. 
+  
+  The `default` Namespace contains the objects which belong to any other Namespace. 
+  
+  `kube-public` is a special Namespace, which is readable by all users and used for special purposes, like bootstrapping a cluster. 
