--- a/_posts/2018-08-01-blog-post-5.md
+++ b/_posts/2018-08-01-blog-post-5.md
@@ -8,5 +8,15 @@ tags:
 
 Here are the notes for `Introduction to OpenStack`.
 
+From Virtualization to Cloud Computing
+------
 
+In general, there are three important approaches when it comes to cloud computing:
 
+* IaaS (Infrastructure as a Service): an infrastructure that is used to provide virtual machines
+
+* PaaS (Platform as a Service): the provider supplies the network, servers, storage, OS and middleware to host an application
+
+* SaaS (Software as a Service): the provider gives access to an application.
+
+OpenStack belongs to the IaaS cloud computing category.
