--- a/_posts/2018-08-01-blog-post-1.md
+++ b/_posts/2018-08-01-blog-post-1.md
@@ -575,3 +575,68 @@ GPU, Cloud TPU
 
 Lecture 16: Adversarial Examples and Adversarial Training
 ------
+
+Modern deep nets are very piecewise linear
+
+The mapping from inputs to outputs: close to linear (nearly linear responses in  practice)
+
+The mapping from parameters to outputs: non-linear
+
+The Fast Gradient Sign Method
+
+$J(\bar{x}, \theta) \approx J(x, \theta) + (\bar{x}-x)^T \nabla_x J(x)$
+
+Maximize $J(x, \theta) + (\bar{x}-x)^T \nabla_x J(x)$
+
+subject to $\|\bar{x} - \|_{\inf} \le \epsilon$
+
+We then have $\bar{x} = x + \epsilon sign(\nabla_x J(x))$
+
+* Attacking is easy
+
+* Defending is difficult
+
+* Adversarial training provides regularization and semi-supervised learning
+
+* The out-of-domain input problem is a bottleneck for model-based optimization generally
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
