--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,13 @@
 ---
-title: 'Blog Post number 1'
+title: 'Introduction to Structured Query Language (SQL)'
 date: 2012-08-14
 permalink: /posts/2012/08/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - SQL
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Introduction to Structured Query Language (SQL) by University of Michigan on Coursera.
 
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
+<div  align="center">
+<img src='/images/Intro_SQL.png'>
+</div>
