--- a/_posts/2018-11-24-blog-post-1.md
+++ b/_posts/2018-11-24-blog-post-1.md
@@ -6,7 +6,7 @@ tags:
   - SQL
 ---
 
-Introduction to Structured Query Language (SQL) by University of Michigan on Coursera.
+[Introduction to Structured Query Language (SQL)](https://www.coursera.org/learn/intro-sql) by University of Michigan on Coursera.
 
 <div  align="center">
 <img src='/images/Intro_SQL.png'>
