--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -9,3 +9,6 @@ tags:
 
 CS224n: Natural Language Processing with Deep Learning by Christopher Manning at Stanford University.
 
+Lecture 1 | Natural Language Processing with Deep Learning
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OQQ-W_63UgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
