--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -9,6 +9,56 @@ tags:
 
 CS224n: Natural Language Processing with Deep Learning by Christopher Manning at Stanford University.
 
-Lecture 1 | Natural Language Processing with Deep Learning
+Lecture 1: Natural Language Processing with Deep Learning
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OQQ-W_63UgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 2: Word Vector Representations: word2vec
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ERibwqs9p38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 3: GloVe: Global Vectors for Word Representation
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ASn7ExxLZws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 4: Word Window Classification and Neural Networks
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uc2_iwVqrRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 5: Backpropagation and Project Advice
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/isPiE-DBagM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 6: Dependency Parsing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PVShkZgXznc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 7: Introduction to TensorFlow
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PicxU81owCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 8: Recurrent Neural Networks and Language Models
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Keqep_PKrY8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 9: Machine Translation and Advanced Recurrent LSTMs and GRUs
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QuELiw8tbx8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 10: Neural Machine Translation and Models with Attention
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IxQtK2SjWWM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 11: Gated Recurrent Units and Further Topics in NMT
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6_MO12fPC-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 12: End-to-End Models for Speech Processing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3MjIkWxXigM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 13: Convolutional Neural Networks
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Lg6MZw_OOLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 14: Tree Recursive Neural Networks and Constituency Parsing
